fix: kill position bun in my code section

--- a/styles/style.css
+++ b/styles/style.css
@@ -39,7 +39,7 @@ hr {
     line-height: 10px;
 }
 .my-code-content {
-    position: absolute;
+    position: relative;
     left: 25%;
     text-align: left;
 }
