--- a/styles/style.css
+++ b/styles/style.css
@@ -19,12 +19,16 @@ hr {
   border-width: 5px;
 }
 
+pre {
+  margin-top: -15px;
+}
+
 th {
   text-align: center;
 }
 
 table {
-  margin-top: -30px;
+  margin-top: -25px;
   border-spacing: 30px; 
 }
 
