--- a/styles/style.css
+++ b/styles/style.css
@@ -102,6 +102,20 @@ table {
   text-decoration: underline;
 }
 
+/* my skills */
+
+.skills-1, .skills-2, .skills-3 {
+  display: inline-block;
+  /* margin-left: 30px; */
+  margin-right: 30px;
+  width: 150px;
+}
+
+.skills-1, .skills-2, .skills-3 > ul {
+  /* width: 6%; */
+}
+
+
 
 /* example of my code */
 
