--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,10 @@ body {
   background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
 }
 
+.centered-container {
+  margin: 0 auto;
+}
+
 li {
   list-style: none;
 }
