--- a/styles/style.css
+++ b/styles/style.css
@@ -35,6 +35,16 @@ h2 {
   color: #66bfbf;
 }
 
+h5 {
+  margin-bottom: 1%;
+}
+
+h6 {
+  margin-top: 3%;
+  margin-bottom: 1%;
+
+}
+
 hr {
   width: 5%;
   margin: 50px auto;
@@ -142,7 +152,7 @@ h1 {
 /* My projects */
 
 .projects-card-collection {
-  margin: 0;
+margin: 0;
 display: flex;
 flex-wrap: wrap;
 align-items: center;
@@ -152,14 +162,19 @@ justify-content: center;
 
 .project-card {
   width: 20%;
-  margin-left: 6%;
-  margin-right: 6%;
+  margin-left: 5%;
+  margin-right: 5%;
   margin-top: 50px;
   margin-bottom: 70px;
+  min-height: 300px;
 }
 
 .project-image {
   width: 100%;
+}
+
+.stack {
+  color: #707070;
 }
 
 /* english level */
